# dailyStream

./: .gitignore  FIXES_SUMMARY.md  Makefile  OPTIMIZATION_REPORT.md  QUICK_REFERENCE.md  README.md  com.dailystream.app.plist  config.example.json  pyproject.toml  run.sh  start.sh  启动DailyStream.command
apps/DailyStreamMac/: Package.resolved  Package.swift
apps/DailyStreamMac/Sources/DailyStreamCore/Bridge/: CoreBridge.swift  EventStream.swift  RPCClient.swift  RPCMessage.swift
apps/DailyStreamMac/Sources/DailyStreamMac/: DailyStreamApp.swift
apps/DailyStreamMac/Sources/DailyStreamMac/About/: AboutView.swift
apps/DailyStreamMac/Sources/DailyStreamMac/Capture/: CaptureOverlay.swift  MagnifierView.swift  SelectionCanvas.swift
apps/DailyStreamMac/Sources/DailyStreamMac/CaptureModes/: CaptureModeDesignerWindow.swift  CaptureModeModels.swift  CapturePresetEditorView.swift  TemplateBrowserSheet.swift
apps/DailyStreamMac/Sources/DailyStreamMac/DailyReview/: DailyReviewWindow.swift
apps/DailyStreamMac/Sources/DailyStreamMac/HUD/: ClipboardCaptureView.swift  ConfirmView.swift  HUDFrame.swift  HUDHost.swift  HUDPanel.swift  NewPipelineView.swift  NewWorkspaceView.swift  PipelinePickerView.swift  PresetNameView.swift  ScreenshotDescView.swift
apps/DailyStreamMac/Tests/DailyStreamCoreTests/: CoreBridgeTests.swift  EventCenterTests.swift  RPCFramingTests.swift  RPCMessageTests.swift
docs/: architecture.md  capture_mode_designer.md  migration.md  rpc_protocol.md
hooks/: README.md  add_mail.sh  ai_commit_message.sh  jsonl_logger.sh  send_mail.sh  smart_archive.sh
scripts/: build_release.sh  bundle_python.sh  dev_run.sh  relocate_workspaces.py  sign_python_framework.sh
src/dailystream/: __init__.py  ai_analyzer.py  app.py  capture.py  cli.py  config.py  hotkeys.py  note_sync.py  pipeline.py  rpc_dispatcher.py  rpc_events.py  rpc_server.py  templates.py  timeline.py  workspace.py
src/dailystream/capture_modes/: __init__.py  catalog.py  executor.py  migrations.py  models.py  templates.py
tests/: conftest.py  test_ai_analyzer.py  test_capture.py  test_capture_modes.py  test_cli.py  test_config.py  test_e2e.py  test_hotkeys.py  test_relative_paths.py  test_rpc_dispatcher.py  test_rpc_events.py  test_rpc_server.py  test_templates_sync.py  test_timeline_export.py  test_workspace_pipeline.py
(+13 files in other folders)
